# lmm

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md  convert_to_multimodal.py  data_generator.py  explore_data.ipynb
data/configs/: v0_spatial_grid.json  v2_spatial_grid.json  v3_spatial_grid.json
eval/: README.md  accuracy.py  environment.yaml  evals.sh  pyproject.toml
lm-train/: README.md  inference.ipynb  pretrain_gpt2.py  pretrain_gptj.py  script.sh
lm-train/config/: base.yaml  config.yaml  gpt2_config.json
lm-train/scripts/: tinystories-val.sh  tinystories.sh  v1_spatial_grid.sh  v2_spatial_grid.sh  v3_spatial_grid.sh  wikitext-val.sh  wikitext.sh
lmm_synthetic/: .gitignore
lmm_synthetic/data/: README.md  convert_to_multimodal.py  data_generator.py  dataset_creation.py  explore_data.ipynb  explore_new_data.ipynb  fix_path.ipynb  getting_image_temp.py  mapping.py  new_data_generator.py  spuco_data_generator.py  spuco_text_dataset.py  spuco_visual_dataset.py  temp.ipynb  temp.py  test.json  testing.ipynb
lmm_synthetic/eval/: accuracy.py  attention_visualization.ipynb  config.ipynb  custom_hooks.ipynb  gpj_config.ipynb  gpt2swap.ipynb  image_classification_probe.py  linear_probe.ipynb  linear_probe.py  linear_probe_train.ipynb  logit_lens.ipynb  logit_lens_vlm.ipynb  multimodal_projector_probe.ipynb  notebook.ipynb  param_swap.ipynb  temp.ipynb  test.ipynb
lmm_synthetic/lm-train/: inference.ipynb
mm-train/: custom_sft_trainer.py  gptj_vlm.py  mm_datasets.py  scratch.ipynb  train_vlm.py  utils.py
(+71 files in other folders)
