[tool.poetry]
name = "lmm_synthetic"
version = "0.1.0"
description = "A repository for pre-training fully synthetic VLMs from scratch."
authors = ["Siddharth Joshi <sjoshi804@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
